--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,7 @@
 <resources>
     <string name="app_name">PC_Weather</string>
+    <string name="splash_hi">HELLO!</string>
+    <string name="permission_denied">Sorry. No permissions = no app work!</string>
     <string name="degrees_celsius">°C</string>
     <string name="n_a">N/A</string>
     <string name="image_format">.png</string>
