--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,10 +2,17 @@
     <string name="app_name">PC_Weather</string>
     <string name="splash_hi">HELLO!</string>
     <string name="permission_denied">Sorry. No permissions = no app work!</string>
+
     <string name="degrees_celsius">°C</string>
     <string name="n_a">N/A</string>
     <string name="image_format">.png</string>
     <string name="weather_label">Weather</string>
     <string name="progress_dialog_message">Loading...</string>
     <string name="error_find_location">Can\'t find location</string>
+    <string name="menu_forecast">Forecast</string>
+
+    <string name="forecast_date_format">EEE, d MMM yyyy</string>
+    <string name="empty_place">\u0020</string>
+    <string name="percent">%</string>
+    <string name="metric_speed">m/s</string>
 </resources>
